# Flywheel-FnCollector

./: .gitignore  README.md  demo.py  demo_collector.py  demo_cross_class.py  demo_overload.py  pyproject.toml
.github/workflows/: publish.yml
src/flywheel_extras/: __init__.py  capability.py  collector.py  container.py  overload.py  protocol.py  typing.py
