[project]
name = "Flywheel-FnCollector"
version = "0.1.0"
description = "Add a FnCollector for Ryanvk Flywheel"
authors = [
    { name = "F_Qilin", email = "fzq0003@gmail.com" },
]
dependencies = [
    "elaina-flywheel>=0.6.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
